# snoflak

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compile_mp.sh  compile_mpi.sh  compile_pthreads.sh  main.cpp
scripts/: generate_video.sh  hex_grid.py  plot_results_gif.py
src/: CMakeLists.txt  lattice.cpp  lattice.h  main.cpp
src_mp/: CMakeLists.txt  lattice.cpp  lattice.h  main.cpp
src_mpi/: CMakeLists.txt  lattice.cpp  lattice.h  main.cpp
src_pthreads/: CMakeLists.txt  lattice.cpp  lattice.h  main.cpp
